--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "travel-agency-fe",
   "version": "0.0.0",
   "scripts": {
+    "start:prod": "node server.js",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -21,6 +22,7 @@
     "@angular/router": "~11.2.11",
     "bootstrap": "^5.0.2",
     "bootstrap-daterangepicker": "^3.1.0",
+    "express": "^4.17.1",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
