--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start:prod": "node server.js",
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
