Added search criteria selection to search form

--- a/angular.json
+++ b/angular.json
@@ -33,9 +33,11 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/@popperjs/core/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/bootstrap-daterangepicker/moment.min.js",
-              "node_modules/bootstrap-daterangepicker/daterangepicker.js"
+              "node_modules/bootstrap-daterangepicker/daterangepicker.js",
+              "node_modules/@dashboardcode/bsmultiselect/dist/js/BsMultiSelect.min.js"
             ]
           },
           "configurations": {
