--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~11.2.11",
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
+    "@dashboardcode/bsmultiselect": "^1.1.15",
+    "@popperjs/core": "^2.9.3",
     "bootstrap": "^5.0.2",
     "bootstrap-daterangepicker": "^3.1.0",
     "express": "^4.17.1",
